fix a build proble for issue#2

--- a/src/liblanelet/CMakeLists.txt
+++ b/src/liblanelet/CMakeLists.txt
@@ -43,7 +43,7 @@
 ICMAKER_SET("liblanelet" IDE_FOLDER ${LIBLANELET_IDE_FOLDER})
 
 FIND_PACKAGE(Pugixml)
-
+add_definitions(-D PUGIXML_HAS_LONG_LONG)
 ICMAKER_ADD_SOURCES(
   Attribute.cpp
   LaneletBase.cpp
@@ -100,7 +100,6 @@ ICMAKER_DEPENDENCIES(EXPORT
 ICMAKER_DEPENDENCIES(
   Pugixml
   )
-
 ICMAKER_BUILD_LIBRARY()
 ICMAKER_INSTALL_HEADERS(liblanelet)
 
